recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: not found: value n
	if (n!=0) {
            ^